# rpi-rgb-led-matrix

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  compile_commands.json  conanfile.txt  screen-test-1.cc  weather-icons.yaml  weather_string.yaml
bindings/c#/examples/PlayGIF/: PlayGIF.csproj
examples-api-use/: Makefile  screen-test-1.cc
examples-api-use/toms-screen/: radio6-now-playing.h  screen-test-1.cc
include/: bus-towards-oval-line.h  current-time-line.h  date-line.h  game-of-life.h  img_utils.h  json-fetcher.h  led-matrix.h  line-updater.h  music-line.h  radio6-line-updater.h  renderable.h  rotary_dial.h  rotating-box.h  screen-menu.h  screen.h  screen_state.h  scrolling-line-screen.h  time-date-weather-line.h  tz.h  tz_private.h  updateable-screen.h  weather-line-updater.h  weather-line.h
include/clients/: mqtt-client.h  mqtt-controller.h  radio6-client.h  spotify-client.h  tfl-client.h
include/core/: date.h  graphics.h  img_utils.h  led-matrix.h  service-registry.h  threaded-canvas-manipulator.h
include/lines/: bus-arrivals-line.h  bus-towards-oval-line.h  current-time-line.h  date-line.h  line-registry.h  music-info-line.h  music-line.h  scrolling-line.h  time-date-weather-line.h  time-line.h  weather-line.h
include/screens/: game-of-life-screen.h  game-of-life.h  menu-screen.h  renderable.h  rotating-box-screen.h  rotating-box.h  screen-menu.h  screen.h  screen_mode.h  screen_state.h  scrolling-line-screen.h  updatable-screen.h  updateable-screen.h
lib/: bdf-font.cc  bus-towards-oval-line.cc  current-time-line.cc  date-line.cc  framebuffer-internal.h  framebuffer.cc  game-of-life.cc  hardware-mapping.c  img_utils.cc  json-fetcher.cc  led-matrix.cc  mqtt-client.cc  mqtt-client.h  music-line.cc  radio6-client.cc  radio6-client.h  radio6-line-updater.cc  rotary_dial.cc  rotating-box.cc  screen-line.cc  screen-line.h  screen-menu.cc  screen_mode.h  scrolling-line-screen.cc  scrolling-line.cc  scrolling-line.h  spotify-client.cc  spotify-client.h  spotify_client.cc  spotify_client.h  tfl-client.cc  tfl-client.h  time-date-weather-line.cc  tx.cpp  weather-line-updater.cc  weather-line.cc  weather-line.updater.cc
scripts/: build.sh
src/app/: main.cc
src/clients/: json-fetcher.cc  mqtt-client.cc  mqtt-controller.cc  radio6-client.cc  spotify-client.cc  tfl-client.cc
src/core/: bdf-font.cc  content-streamer.cc  framebuffer-internal.h  framebuffer.cc  gpio.cc  graphics.cc  img_utils.cc  led-matrix-c.cc  led-matrix.cc  multiplex-mappers-internal.h  options-initialize.cc  pixel-mapper.cc  service-registry.cc  thread.cc
src/lines/: bus-arrivals-line.cc  bus-towards-oval-line.cc  current-time-line.cc  date-line.cc  line-registry.cc  music-info-line.cc  music-line.cc  scrolling-line.cc  time-date-weather-line.cc  time-line.cc  weather-line.cc
src/screens/: game-of-life-screen.cc  game-of-life.cc  menu-screen.cc  rotating-box-screen.cc  rotating-box.cc  screen-menu.cc  scrolling-line-screen.cc
